samples/_failures_safe/1761165029_d505c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_193e5e42.c: In function ‘tokenize’:
./samples/SAFE/__tmp_193e5e42.c:164:9: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  164 |     if (token
      |         ^~~~~
      |         Token
./samples/SAFE/__tmp_193e5e42.c:164:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_193e5e42.c:164:14: error: expected ‘)’ at end of input
  164 |     if (token
      |        ~     ^
      |              )
./samples/SAFE/__tmp_193e5e42.c:164:5: error: expected declaration or statement at end of input
  164 |     if (token
      |     ^~
